# freebsd-ports

./: GIDs  MOVED  UIDs  UPDATING
Mk/: bsd.default-versions.mk  bsd.gecko.mk  bsd.sites.mk
Mk/Uses/: electron.mk  kde.mk  linux.mk  nextcloud.mk  perl5.mk  php.mk  python.mk  xorg-cat.mk
Tools/scripts/: pypi-find-projects-containing-string.py
accessibility/darkman/: Makefile
archivers/: Makefile
astro/: Makefile
audio/: Makefile
converters/: Makefile
databases/: Makefile
deskutils/: Makefile
devel/: Makefile
devel/hs-threadscope/: Makefile  Makefile.cabal  distinfo
devel/perfetto/files/: patch-BUILD.gn  patch-examples_dtrace_BUILD.gn  patch-examples_dtrace_dtrace__probe.c  patch-examples_dtrace_examples_dtrace__probes.cfg  patch-examples_freebsd_BUILD.gn  patch-examples_freebsd_examples_power.cfg  patch-examples_freebsd_freebsd__sys__stats.c  patch-examples_freebsd_freebsd__sys__stats__cpu.c  patch-examples_freebsd_freebsd__sys__stats__disk.c  patch-examples_freebsd_freebsd__sys__stats__intr.c  patch-examples_freebsd_power.c  patch-include_perfetto_public_BUILD.gn  patch-protos_perfetto_config_BUILD.gn  patch-protos_perfetto_config_data__source__config.proto  patch-protos_perfetto_config_dtrace_BUILD.gn  patch-protos_perfetto_config_dtrace_dtrace__config.proto  patch-src_tracebox_tracebox.cc  patch-tools_gen__c__protos
dns/: Makefile
emulators/: Makefile
ftp/: Makefile
games/: Makefile
graphics/: Makefile
java/: Makefile
lang/: Makefile
mail/: Makefile
math/: Makefile
misc/: Makefile
multimedia/: Makefile
net/: Makefile
net-im/: Makefile
net-mgmt/: Makefile
print/: Makefile
science/: Makefile
security/: Makefile
sysutils/: Makefile
textproc/: Makefile
www/: Makefile
www/chromium/files/: patch-BUILD.gn  patch-base_BUILD.gn  patch-base_allocator_partition__allocator_partition__alloc.gni  patch-base_allocator_partition__allocator_src_partition__alloc_BUILD.gn  patch-base_allocator_partition__allocator_src_partition__alloc_partition__alloc__constants.h  patch-base_allocator_partition__allocator_src_partition__alloc_partition__root.cc  patch-base_allocator_partition__allocator_src_partition__alloc_spinning__mutex.cc  patch-base_allocator_partition__allocator_src_partition__alloc_stack_stack.cc  patch-base_allocator_partition__allocator_src_partition__alloc_thread__isolation_pkey.cc  patch-base_debug_stack__trace__posix.cc  patch-base_files_file__path__watcher__unittest.cc  patch-base_rand__util.h  patch-base_system_sys__info.h  patch-base_system_sys__info__unittest.cc  patch-build_config_BUILDCONFIG.gn  patch-build_config_compiler_BUILD.gn  patch-build_config_compiler__cpu__abi.gn  patch-build_config_ozone.gni  patch-build_modules_BUILD.gn  patch-build_modules_unified_modulemap__config.py  patch-build_toolchain_gcc__solink__wrapper.py  patch-build_toolchain_gcc__toolchain.gni  patch-chrome_app_chrome__command__ids.h  patch-chrome_app_chrome__main.cc  patch-chrome_app_chrome__main__delegate.cc  patch-chrome_browser_about__flags.cc  patch-chrome_browser_background_glic_glic__status__icon.cc  patch-chrome_browser_browser__features.cc  patch-chrome_browser_browser__features.h  patch-chrome_browser_browser__process__impl.cc  patch-chrome_browser_browser__process__impl.h  patch-chrome_browser_chrome__browser__interface__binders.cc  patch-chrome_browser_chrome__browser__interface__binders__webui.cc  patch-chrome_browser_chrome__browser__interface__binders__webui__parts__desktop.cc  patch-chrome_browser_chrome__browser__main.cc  patch-chrome_browser_chrome__content__browser__client.cc  patch-chrome_browser_chrome__content__browser__client.h  patch-chrome_browser_chrome__content__browser__client__navigation__throttles.cc  patch-chrome_browser_component__updater_iwa__key__distribution__component__installer.cc  patch-chrome_browser_component__updater_iwa__key__distribution__component__installer.h  (+373 more)
www/deno/files/: patch-cargo-crates_deno__panic-0.2.0_src_libunwind.rs  patch-cargo-crates_libffi-sys-4.1.0_build_not__msvc.rs  patch-cargo-crates_libsui-0.16.0_lib.rs  patch-cargo-crates_libuv-sys-lite  patch-cargo-crates_v8-149.4.0_.gn  patch-cargo-crates_v8-149.4.0_build.rs  patch-cargo-crates_v8-149.4.0_build_config_BUILD.gn  patch-cargo-crates_v8-149.4.0_build_config_BUILDCONFIG.gn  patch-cargo-crates_v8-149.4.0_build_config_c++_modules.gni  patch-cargo-crates_v8-149.4.0_build_config_clang_BUILD.gn  patch-cargo-crates_v8-149.4.0_build_config_compiler_BUILD.gn  patch-cargo-crates_v8-149.4.0_build_config_linux_BUILD.gn  patch-cargo-crates_v8-149.4.0_build_config_linux_pkg-config.py  patch-cargo-crates_v8-149.4.0_build_config_sanitizers_sanitizers.gni  patch-cargo-crates_v8-149.4.0_build_config_v8__target__cpu.gni  patch-cargo-crates_v8-149.4.0_build_detect__host__arch.py  patch-cargo-crates_v8-149.4.0_build_gn__run__binary.py  patch-cargo-crates_v8-149.4.0_build_linux_chrome.map  patch-cargo-crates_v8-149.4.0_build_linux_unbundle_libusb.gn  patch-cargo-crates_v8-149.4.0_build_toolchain_freebsd_BUILD.gn  patch-cargo-crates_v8-149.4.0_build_toolchain_gcc__solink__wrapper.py  patch-cargo-crates_v8-149.4.0_build_toolchain_gcc__toolchain.gni  patch-cargo-crates_v8-149.4.0_build_toolchain_toolchain.gni  patch-cargo-crates_v8-149.4.0_third__party_abseil-cpp_absl_base_config.h  patch-cargo-crates_v8-149.4.0_third__party_abseil-cpp_absl_base_internal_sysinfo.cc  patch-cargo-crates_v8-149.4.0_v8_BUILD.gn  patch-cargo-crates_v8-149.4.0_v8_include_v8config.h  patch-cargo-crates_v8-149.4.0_v8_src_api_api.cc  patch-cargo-crates_v8-149.4.0_v8_src_base_platform_platform-freebsd.cc  patch-cargo-crates_v8-149.4.0_v8_src_base_platform_platform-posix.cc  patch-cargo-crates_v8-149.4.0_v8_src_diagnostics_perf-jit.cc  patch-cargo-crates_v8-149.4.0_v8_src_diagnostics_perf-jit.h  patch-cli_Cargo.toml  patch-cli_args_flags.rs  patch-cli_args_mod.rs  patch-cli_lib_version.rs  patch-cli_standalone_binary.rs  patch-cli_task__runner.rs  patch-cli_tools_bundle_esbuild.rs  patch-cli_tools_compile.rs  (+10 more)
x11/: Makefile
x11-fonts/: Makefile
x11-toolkits/: Makefile
(+8466 files in other folders)
