USE_CABAL=	alex-3.5.4.2 \
		ansi-terminal-1.1.5 \
		ansi-terminal-types-1.1.3 \
		cairo-0.13.12.0 \
		colour-2.3.7 \
		file-embed-0.0.16.0 \
		ghc-events-0.21.0.0 \
		gio-0.13.12.0 \
		glib-0.13.12.0 \
		gtk2hs-buildtools-0.13.12.0 \
		gtk3-0.15.10 \
		happy-2.2 \
		happy-lib-2.2 \
		hashable-1.5.1.0 \
		hashtables-1.4.2 \
		optparse-applicative-0.19.0.0_1 \
		pango-0.13.12.0 \
		prettyprinter-1.7.2 \
		prettyprinter-ansi-terminal-1.1.4 \
		primitive-0.9.1.0_1 \
		random-1.3.1 \
		splitmix-0.1.3.2 \
		tagged-0.8.10_1 \
		tasty-1.5.4 \
		temporary-1.3 \
		utf8-string-1.0.2 \
		vector-0.13.2.0_5 \
		vector-stream-0.1.0.1_4

