--- protos/perfetto/config/BUILD.gn.orig	2026-07-07 14:09:45 UTC
+++ protos/perfetto/config/BUILD.gn
@@ -24,6 +24,7 @@ perfetto_proto_library("@TYPE@") {
     "../common:semantic_type_@TYPE@",
     "android:@TYPE@",
     "ftrace:@TYPE@",
+    "dtrace:@TYPE@",
     "gpu:@TYPE@",
     "inode_file:@TYPE@",
     "interceptors:@TYPE@",
