--- chrome/browser/extensions/BUILD.gn.orig	2026-07-01 06:24:19 UTC
+++ chrome/browser/extensions/BUILD.gn
@@ -1524,6 +1524,10 @@ source_set("extensions") {
       ]
     }
 
+    if (is_bsd) {
+      sources -= [ "api/image_writer_private/removable_storage_provider_linux.cc" ]
+    }
+
     if (enable_pdf) {
       deps += [
         "//chrome/browser/pdf",
