--- media/mojo/mojom/BUILD.gn.orig	2026-07-01 06:24:19 UTC
+++ media/mojo/mojom/BUILD.gn
@@ -1072,7 +1072,7 @@ source_set("test_support") {
   sources = []
   deps = []
 
-  if (is_linux || is_chromeos) {
+  if (!is_bsd && (is_linux || is_chromeos)) {
     sources += [
       "buffer_handle_test_util.cc",
       "buffer_handle_test_util.h",
