--- services/network/BUILD.gn.orig	2026-07-01 06:24:19 UTC
+++ services/network/BUILD.gn
@@ -447,7 +447,6 @@ if (is_linux || is_chromeos) {
     deps = [
       "//base",
       "//components/vrp_flags:buildflags",
-      "//sandbox/linux:sandbox_services",
       "//sandbox/policy",
     ]
     configs += [ "//build/config/compiler:wexit_time_destructors" ]
