--- third_party/sqlite/BUILD.gn.orig	2026-07-01 06:24:19 UTC
+++ third_party/sqlite/BUILD.gn
@@ -159,7 +159,7 @@ config("sqlite_warnings") {
       ]
     }
   }
-  if (is_linux || is_chromeos) {
+  if ((is_linux || is_chromeos) && !is_bsd) {
     cflags += [
       # SQLite doesn't believe in compiler warnings, preferring testing.
       # http://www.sqlite.org/faq.html#q17
