--- ui/ozone/platform/wayland/BUILD.gn.orig	2026-07-01 06:24:19 UTC
+++ ui/ozone/platform/wayland/BUILD.gn
@@ -248,7 +248,6 @@ source_set("wayland") {
     "//mojo/public/cpp/system",
     "//skia",
     "//third_party/angle:includes",
-    "//third_party/libsync",
     "//third_party/wayland:wayland_client",
     "//third_party/wayland:wayland_cursor",
     "//third_party/wayland:wayland_egl",
